--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Poster</th>
-                <td>{{ serie.poster }}</td>
+                <td><img src="{{ asset('pictures'.serie.getImageName()) }}" /></td>
             </tr>
             <tr>
                 <th>Resume</th>
