--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,25 +3,26 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Hub Series{% endblock %}</title>
-        <style>
-          ul li {
-            list-style-type: none;
-          }
-        </style> <!-- custom css a integrer -->
+
+  <link rel="stylesheet" href="css/carousel.css">
+  <link rel="stylesheet" href="css/colorGuide.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="js/carousel.js"></script>
+
         {% block stylesheet %}
           {% stylesheets
-            '@FilRougeBundle/Resources/css/colorGuide.css'
             '@IdeatoStarRatingBundle/Resources/public/jquery.raty.css' filter='cssrewrite' %}
-          <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
           <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
           {% endstylesheets %}
         {% endblock %}
+        <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" /> <!-- Icone d'onglet a revoir -->
     </head>
     <body>
       <header>
-        <nav class="navbar navbar-inverse" role="navigation">
+        <nav class="navbar-perso" role="navigation">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -95,7 +96,7 @@
         {% endif %}
       </div> <!-- todo : placer flashbag -->
       <main>
-        <div class="container jumbotron">
+        <div class="container-carousel">
           {% block body %}{% endblock %}
           {% block fos_user_content %}{% endblock %}
           {% block fos_message_content %}{% endblock %}
