--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -40,6 +40,9 @@
             <a href="{{ path('serie_edit', { 'id': serie.id }) }}">Edit</a>
         </li>
         <li>
+            <button id="follow">Follow</button>
+        </li>
+        <li>
             {{ form_start(delete_form) }}
                 <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
@@ -49,6 +52,29 @@
         </li>
     </ul>
     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript">
+       $('#follow').click( function()
+       {
+         /**
+          * Follow Ajax request
+          *
+          * @data : user_id
+          */
+         $.ajax(
+           {
+             url:"/ajax/follow",
+             data: { id: {{ serie.id}} },
+             success: function(data){
+               console.log(data);
+             },
+             error: function(error){
+               console.log(error);
+             }
+           }
+         );
+       });
+     </script>
     {% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': serie.id } %}
     {% else %}
       <!-- todo : outil de tradiction a mettre en place -->
