--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>{% block title %}Hub Series{% endblock %}</title>
         <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
-        <link rel="stylesheet" href="css/colorGuide.css">
+        <link rel="stylesheet" href="{{ asset('css/colorGuide.css') }}">
         <link rel="stylesheet" href="{{ asset('css/carousel.css') }}">
         <link rel="stylesheet" href="{{ asset('@IdeatoStarRatingBundle/Resources/public/jquery.raty.css') }}" type="text/css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -13,67 +13,87 @@
     </head>
     <body>
       <header>
-        <nav class="navbar-perso" role="navigation">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"><img class="logo" src="{{ asset('logo.png') }}"></a>
-          </div>
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <div class="col-sm-3 col-md-3">
-                <form class="navbar-form" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-                </form>
-            </div>
 
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="{{ path('serie_new')}}">Add a serie </a></li>
-              {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+<nav class="navbar-blanc navbar-fixed-top" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only grey">Toggle navigation</span>
+      <span class="icon-bar grey"></span>
+      <span class="icon-bar grey"></span>
+      <span class="icon-bar grey"></span>
+    </button>
+    <a class="navbar-brand navbar-left" href="/"><img class="logo" src="{{ asset('logo.png') }}"></a>
+  </div>
+  
+  <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="col-sm-3 col-md-3">
+        <form class="navbar-form" role="search">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search" name="q">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                </button>
+              </div>
+          </div>
+        </form>
+      </div>
+
+    <ul class="menu nav navbar-nav navbar-center">
+      <li class="IntroFont menu1"><a href="#">Accueil</a></li>
+      <li class="IntroFont menu2"><a href="#">Actualités</a></li>
+      <li class="IntroFont menu3"><a href="#">Series</a></li>
+      <li class="IntroFont menu4"><a href="#">Top</a></li>
+      <li class="IntroFont menu1"><a href="{{ path('serie_new')}}">Add a serie </a></li>
+    </ul>
+
+
+    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+            <ul class="menu nav navbar-nav navbar-right ">
               <li>
                 <a class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">{{ fos_message_nb_unread() }} <i class="fa fa-envelope"></i><span class="caret"></span></a>
-                <ul class="dropdown-menu">
+                  <ul class="dropdown-menu">
                     <li><a href="{{ url('fos_message_inbox') }}">{% trans from 'FOSMessageBundle' %}inbox{% endtrans %}</a></li>
                     <li><a href="{{ url('fos_message_sent') }}">{% trans from 'FOSMessageBundle' %}sent{% endtrans %}</a></li>
                     <li><a href="{{ url('fos_message_deleted') }}">{% trans from 'FOSMessageBundle' %}deleted{% endtrans %}</a></li>
-                </ul>
+                  </ul>
               </li>
+              
               <li>
                 <a class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-user"></i>
                 {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="{{ path('fos_user_profile_show')}}" >Profile</a>
-                  </li>
-                  <li>
-                    <a href="{{ path('fos_user_resetting_request')}}" >Reset</a>
-                  </li>
-                </ul>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="{{ path('fos_user_profile_show')}}" >Profile</a>
+                    </li>
+                    <li>
+                      <a href="{{ path('fos_user_resetting_request')}}" >Reset</a>
+                    </li>
+                  </ul>
               </li>
+
               <li>
                 <a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out"></i> {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a>
               </li>
+              </ul>
               {% else %}
-              <li>
+              <ul class="menu nav navbar-nav navbar-right ">
+              <li class="menu-gris">
                 <a href="{{ path('fos_user_security_login') }}"><i class="fa fa-sign-in"></i> {{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
               </li>
-              <li>
+              <li class="menu-gris">
                 <a href="{{ path('fos_user_registration_register')}}"><i class="fa fa-user-plus"></i> Sign Up</a>
               </li>
-              {% endif %}
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </nav>
+              </ul>
+      {% endif %}      
+
+
+
+    </div><!-- /.navbar-collapse -->
+</nav>
+
+
       </header> <!-- Header end -->
 
       <div>
@@ -90,6 +110,8 @@
 
       <main>
         {% block carousel %}{% endblock %}
+ 
+
         <div class="container-fluid">
           <aside class="col-md-2">Panel</aside>
           <div class="col-md-8">
@@ -102,14 +124,22 @@
         </div>
       </main><!-- Main end -->
 
-      <footer class="container">
+      <footer class="container center-block ">
         Projet Fil Rouge 2016 - Alex & Manu
       </footer><!-- Footer end -->
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
       <script src="{{ asset('js/carousel.js') }}"></script>
+      <script src="{{ asset('js/navbar.js') }}"></script>
       <script src="{{ asset('@IdeatoStarRatingBundle/Resources/public/jquery.raty.js') }}"></script>
       <script src="{{ asset('@IdeatoStarRatingBundle/Resources/public/jquery.starrating.js') }}"></script>
+      <script>
+        $(document).ready(function(){
+          $("button").click(function(){
+            $("p").toggle();
+          });
+        });
+      </script>
     </body>
 </html>
