--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -40,7 +40,7 @@
             <a href="{{ path('serie_edit', { 'id': serie.id }) }}">Edit</a>
         </li>
         <li>
-            <button id="follow">Follow</button>
+            <button id="follow" class="btn btn-primary btn-sm"></button>
         </li>
         <li>
             {{ form_start(delete_form) }}
@@ -54,19 +54,39 @@
     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script type="text/javascript">
+      /**
+       * is Followed ? Ajax request
+       *
+       * @data : serie id
+       */
+      $.ajax(
+        {
+          url:"/ajax/isfollowed",
+          data: { id: {{ serie.id}} },
+          success: function(data){
+            if (data) {
+              $("#follow").html(data);
+            }
+          },
+          error: function(error){
+            console.log(error);
+          }
+        }
+      );
+
        $('#follow').click( function()
        {
          /**
           * Follow Ajax request
           *
-          * @data : user_id
+          * @data : serie id
           */
          $.ajax(
            {
              url:"/ajax/follow",
              data: { id: {{ serie.id}} },
              success: function(data){
-               console.log(data);
+                $("#follow").html(data);
              },
              error: function(error){
                console.log(error);
