--- a/app/Resources/views/serie/index.html.twig
+++ b/app/Resources/views/serie/index.html.twig
@@ -1,47 +1,36 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Serie list</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Poster </th>
-                <th>Resume</th>
-                <th>Season</th>
-                <th>Episode</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
+<div class="container">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Serie list</h1>
+            </div>
+        </div>
+    </div>
+
         {% for serie in series %}
-            <tr>
-                <td><a href="{{ path('serie_show', { 'id': serie.id }) }}">{{ serie.id }}</a></td>
-                <td>{{ serie.title }}</td>
-                <td><img src="{{ asset(serie.getImageName()) }}" /></td>
-                <td>{{ serie.resume }}</td>
-                <td>{{ serie.season }}</td>
-                <td>{{ serie.episode }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('serie_show', { 'id': serie.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('serie_edit', { 'id': serie.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        
+        <a class="" href="{{ path('serie_show', { 'id': serie.id }) }}">
+            <div class="container col-lg-3 col-sm-4 col-xs-6">
+                <h2 class="titre-serie">{{ serie.title }}</h2>
+                <img class="img-responsive img-film-galerie" src="{{ asset(serie.getImageName()) }}" alt="">
+            </div>
+        </a>
 
+        {% endfor %}
     <ul>
         <li>
             <a href="{{ path('serie_new') }}">Create a new entry</a>
         </li>
     </ul>
+</div>
+
+
+
+    <!-- Page Content -->
+
+            
 {% endblock %}
