--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,115 +1,43 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, user-scalable=no">
-        <title>{% block title %}Hub Series{% endblock %}</title>
-        <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
-        <link rel="stylesheet" href="css/colorGuide.css">
-        <link rel="stylesheet" href="{{ asset('css/carousel.css') }}">
-        <link rel="stylesheet" href="{{ asset('@IdeatoStarRatingBundle/Resources/public/jquery.raty.css') }}" type="text/css" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" /> <!-- Icone d'onglet a revoir -->
-    </head>
-    <body>
-      <header>
-        <nav class="navbar-perso" role="navigation">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"><img class="logo" src="{{ asset('logo.png') }}"></a>
-          </div>
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <div class="col-sm-3 col-md-3">
-                <form class="navbar-form" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-                </form>
-            </div>
+{% include 'includes/header.html.twig' %}
+{% include 'includes/navbar.html.twig' %}
+{% include 'includes/login.html.twig' %}
 
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="{{ path('serie_new')}}">Add a serie </a></li>
-              {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-              <li>
-                <a class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">{{ fos_message_nb_unread() }} <i class="fa fa-envelope"></i><span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="{{ url('fos_message_inbox') }}">{% trans from 'FOSMessageBundle' %}inbox{% endtrans %}</a></li>
-                    <li><a href="{{ url('fos_message_sent') }}">{% trans from 'FOSMessageBundle' %}sent{% endtrans %}</a></li>
-                    <li><a href="{{ url('fos_message_deleted') }}">{% trans from 'FOSMessageBundle' %}deleted{% endtrans %}</a></li>
-                </ul>
-              </li>
-              <li>
-                <a class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-user"></i>
-                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="{{ path('fos_user_profile_show')}}" >Profile</a>
-                  </li>
-                  <li>
-                    <a href="{{ path('fos_user_resetting_request')}}" >Reset</a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out"></i> {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a>
-              </li>
-              {% else %}
-              <li>
-                <a href="{{ path('fos_user_security_login') }}"><i class="fa fa-sign-in"></i> {{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-              </li>
-              <li>
-                <a href="{{ path('fos_user_registration_register')}}"><i class="fa fa-user-plus"></i> Sign Up</a>
-              </li>
-              {% endif %}
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </nav>
-      </header> <!-- Header end -->
-
-      <div>
-        {% if app.request.hasPreviousSession %}
-        {% for type, messages in app.session.flashbag.all() %}
+  <div> <!-- todo : placer flashbag -->
+    {% if app.request.hasPreviousSession %}
+      {% for type, messages in app.session.flashbag.all() %}
         {% for message in messages %}
-        <div class="flash-{{ type }}">
-          {{ message }}
-        </div>
+          <div class="flash-{{ type }}">
+            {{ message }}
+          </div>
         {% endfor %}
-        {% endfor %}
-        {% endif %}
-      </div> <!-- todo : placer flashbag -->
+      {% endfor %}
+    {% endif %}
+  </div>
 
-      <main>
-        {% block carousel %}{% endblock %}
-        <div class="container-fluid">
-          <aside class="col-md-2">Panel</aside>
-          <div class="col-md-8">
-          {% block body %}{% endblock %}
-          {% block fos_user_content %}{% endblock %}
-          {% block fos_message_content %}{% endblock %}
-          {% block javascripts %}{% endblock %}</div>
-          <div class="col-md-2">Side content</div>
-          <!-- responsive designe à faire -->
-        </div>
-      </main><!-- Main end -->
+  <main>
+    {% block carousel %}{% endblock %}
+    <div class="container-fluid mt30p">
+      <aside class="col-md-2 visible-md visible-lg hidden-sm">
+        {% block panel %}{% endblock %}
+      </aside>
 
-      <footer class="container">
-        Projet Fil Rouge 2016 - Alex & Manu
-      </footer><!-- Footer end -->
+      <div class="col-md-8">
+        {% block body %}{% endblock %}
+        {% block fos_user_content %}{% endblock %}
+        {% block fos_message_content %}{% endblock %}
+        {% block javascripts %}{% endblock %}
+      </div>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-      <script src="{{ asset('js/carousel.js') }}"></script>
-      <script src="{{ asset('@IdeatoStarRatingBundle/Resources/public/jquery.raty.js') }}"></script>
-      <script src="{{ asset('@IdeatoStarRatingBundle/Resources/public/jquery.starrating.js') }}"></script>
-    </body>
+      <div class="col-md-2">
+        {% block side_content %}{% endblock %}
+      </div>
+    </div>
+  </main><!-- Main end -->
+{% include 'includes/footer.html.twig' %}
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="{{ asset('js/carousel.js') }}"></script>
+
+</body>
 </html>
