--- a/app/Resources/views/serie/edit.html.twig
+++ b/app/Resources/views/serie/edit.html.twig
@@ -20,7 +20,6 @@
         </li>
     </ul>
     {% else %}
-      <button type="button" class="btn btn-primary"><i class="fa fa-sign-in"></i> Sign in</button>&nbsp;or&nbsp;
-      <button type="button" class="btn btn-primary">Sign up</button>
+      {% include 'includes/footer.html.twig' %}
     {% endif %}
 {% endblock %}
