--- a/app/Resources/views/serie/new.html.twig
+++ b/app/Resources/views/serie/new.html.twig
@@ -15,7 +15,6 @@
         </li>
     </ul>
     {% else %}
-      <button type="button" class="btn btn-primary"><i class="fa fa-sign-in"></i> Log in</button>&nbsp;or&nbsp;
-      <button type="button" class="btn btn-primary"><i class="fa fa-user-plus"></i> Sign up</button>
+      {% include 'includes/footer.html.twig' %}
     {% endif %}
 {% endblock %}
