--- a/src/FilRougeBundle/Resources/views/Default/index.html.twig
+++ b/src/FilRougeBundle/Resources/views/Default/index.html.twig
@@ -1,42 +1,69 @@
 {% extends 'base.html.twig' %}
 
 {% block carousel %}
-<div id="myCarousel" class="carousel slide">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li class="item1 active"></li>
-    <li class="item2"></li>
-    <li class="item3"></li>
-    <li class="item4"></li>
-  </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner " role="listbox">
-    <div class="item active">
-      <img src="{{ asset('img/imgCarousel/breakingBad2.jpg') }}">
-    </div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+      Indicators
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="{{ asset('img/imgCarousel/got2.jpg') }}" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption ">
+              <h1 class="IntroFontCarousel">Game of Thrones.</h1>
+              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="{{ asset('img/imgCarousel/mrr2.jpg') }}" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption ">
+              <h1 class="IntroFontCarousel">Mr Robot.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="{{ asset('img/imgCarousel/breakingBad2.jpg') }}" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption ">
+              <h1 class="IntroFontCarousel">Breaking Bad</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->{% endblock %}
 
-    <div class="item">
-      <img src="{{ asset('img/imgCarousel/got2.jpg') }}">
-    </div>
 
-    <div class="item">
-      <img src="{{ asset('img/imgCarousel/mrr2.jpg') }}">
-    </div>
+{% block panel %}
+<p>Panel</p>
 
-    <div class="item">
-      <img src="{{ asset('img/imgCarousel/vinyl2.jpg') }}">
-    </div>
-  </div>
+{% endblock %}
 
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+
+{% block body %}
+<p>Body top serie actu</p>
+{% endblock %}
+
+
+{% block side_content %}
+    <h3>Derniers commentaires par séries</h3>
+    <p>esklfhhdfkfhj</p>
 {% endblock %}
