--- a/web/css/carousel.css
+++ b/web/css/carousel.css
@@ -1,10 +1,16 @@
+.container-carousel {
+	margin: 0 auto;
+  padding-right: 0px;
+  padding-left: 0px;
+}
 
 .carousel{
     background: #2f4357;
     margin-top: 0px;
-    max-height: 400px;
     overflow:hidden;
 }
+
+
 
 .carousel .item img{
     margin: 0 auto; /* Align slide image horizontally center */
@@ -19,4 +25,17 @@
 .carousel-inner > .item > a > img {
       width: 100%;
       margin: auto;
+}
+
+.text-img{
+  position: relative;
+  left: 15%;
+  right: 15%;
+  bottom: 20px;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
