--- a/web/css/colorGuide.css
+++ b/web/css/colorGuide.css
@@ -1,115 +1,187 @@
-.logo {
-	width: 140px;
+@font-face {
+font-family: 'IntroFont';
+src: url('../fonts/Intro.otf') format('truetype');
+font-weight: normal;
+font-style: normal;
 }
-
-ul li {
-    list-style-type: none;
-}
-
-.blue{
-	background-color: #3fb9c7;
-}
-
-.container-carousel {
-	margin: 0 auto;
-  padding-right: 0px;
-  padding-left: 0px;
+.IntroFont{
+  font-family: 'IntroFont';
+  font-size: 1em;
 }
 
 
-.navbar-perso {
-  background-color: #fff;
-  border-color: #fff;
+.IntroFontCarousel{
+  font-family: 'IntroFont';
+  font-size: 2.5em;
 }
-.navbar-perso .navbar-brand {
-  color: #777;
+
+/* Changes standart bootstrap settings
+  .pagination (portfolio-section)
+  .media-left (about-section)
+  .media-body (about-section)
+  .author-name (navbar)
+  .container
+  .navbar
+*/
+
+body { padding-top: 50px; } /* http://getbootstrap.com/components/#navbar-fixed-top */
+
+
+
+.navigation {
+position: fixed;
+z-index: 10;
 }
-.navbar-perso .navbar-brand:hover,
-.navbar-perso .navbar-brand:focus {
-  color: #666666;
-  background-color: transparent;
+
+.entete {
+margin-top: 50px;
 }
-.navbar-perso .navbar-text {
-  color: #777;
+
+.navbar-blanc{
+  padding-top:10px;
+  padding-bottom: 10px;
+  padding-left:5px;
+  padding-right:5px;
+  background-color: #ffffff;
 }
-.navbar-perso .navbar-nav > li > a {
-  color: #777;
+
+
+
+.menu a {
+  color:#666666;
+  background-color: #ffffff;
+  margin-right: 10px;
+  position: relative;
 }
-.navbar-perso .navbar-nav > li > a:hover,
-.navbar-perso .navbar-nav > li > a:focus {
-  color: #333;
-  background-color: transparent;
+
+.menu1 a {
+  color:#666666;
+  background-color: #ffffff;
 }
-.navbar-perso .navbar-nav > .active > a,
-.navbar-perso .navbar-nav > .active > a:hover,
-.navbar-perso .navbar-nav > .active > a:focus {
-  color: #555;
-  background-color: #e7e7e7;
+
+.menu2 a{
+  color:#666666;
+  background-color: #ffffff;
 }
-.navbar-perso .navbar-nav > .disabled > a,
-.navbar-perso .navbar-nav > .disabled > a:hover,
-.navbar-perso .navbar-nav > .disabled > a:focus {
-  color: #ccc;
-  background-color: transparent;
+
+.menu3 a{
+  color:#666666;
+  background-color: #ffffff;
 }
-.navbar-perso .navbar-toggle {
-  border-color: #ddd;
+
+.menu4 a{
+  color:#666666;
+  background-color: #ffffff;
 }
-.navbar-perso .navbar-toggle:hover,
-.navbar-perso .navbar-toggle:focus {
-  background-color: #ddd;
+
+.menu1:hover a:hover{
+  color:#ffffff;
+  background-color: #fdb515;
 }
-.navbar-perso .navbar-toggle .icon-bar {
-  background-color: #888;
+
+.menu2:hover a:hover{
+  color:#ffffff;
+  background-color: #00b6de;
 }
-.navbar-perso .navbar-collapse,
-.navbar-perso .navbar-form {
-  border-color: #e7e7e7;
+
+.menu3:hover a:hover{
+  color:#ffffff;
+  background-color: #5aba92;
 }
-.navbar-perso .navbar-nav > .open > a,
-.navbar-perso .navbar-nav > .open > a:hover,
-.navbar-perso .navbar-nav > .open > a:focus {
-  color: #555;
-  background-color: #e7e7e7;
+
+.menu4:hover a:hover{
+  color:#ffffff;
+  background-color: #e73229;
 }
-@media (max-width: 767px) {
-  .navbar-perso .navbar-nav .open .dropdown-menu > li > a {
-    color: #777;
-  }
-  .navbar-perso .navbar-nav .open .dropdown-menu > li > a:hover,
-  .navbar-perso .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #333;
-    background-color: transparent;
-  }
-  .navbar-perso .navbar-nav .open .dropdown-menu > .active > a,
-  .navbar-perso .navbar-nav .open .dropdown-menu > .active > a:hover,
-  .navbar-perso .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #555;
-    background-color: #e7e7e7;
-  }
-  .navbar-perso .navbar-nav .open .dropdown-menu > .disabled > a,
-  .navbar-perso .navbar-nav .open .dropdown-menu > .disabled > a:hover,
-  .navbar-perso .navbar-nav .open .dropdown-menu > .disabled > a:focus {
-    color: #ccc;
-    background-color: transparent;
-  }
+
+.grey{
+  background-color: #666666;
 }
-.navbar-perso .navbar-link {
-  color: #777;
+
+.menu-gris a {
+  color:#666666;
+  background-color: #ffffff;
 }
-.navbar-perso .navbar-link:hover {
-  color: #333;
+
+.menu-gris:hover a:hover{
+  color:#ffffff;
+  background-color: #666666;
 }
-.navbar-perso .btn-link {
-  color: #777;
+
+.nav > .menu1 > a:focus{
+ text-decoration: none;
+ background-color: #fdb515 ;
+ color: #ffffff;
 }
-.navbar-perso .btn-link:hover,
-.navbar-perso .btn-link:focus {
-  color: #333;
+
+.nav > .menu2 > a:focus{
+ text-decoration: none;
+ background-color: #00b6de ;
+ color: #ffffff;
 }
-.navbar-perso .btn-link[disabled]:hover,
-fieldset[disabled] .navbar-perso .btn-link:hover,
-.navbar-perso .btn-link[disabled]:focus,
-fieldset[disabled] .navbar-perso .btn-link:focus {
-  color: #ccc;
+
+.nav > .menu3 > a:focus{
+ text-decoration: none;
+ background-color: #5aba92 ;
+ color: #ffffff;
+}
+
+.nav > .menu4 > a:focus{
+ text-decoration: none;
+ background-color: #e73229 ;
+ color: #ffffff;
+}
+
+.nav > .menu-gris > a:focus{
+ text-decoration: none;
+ background-color: #666666;
+ color: #ffffff;
+}
+
+.btn-carousel {
+  color: #ffffff;
+  background-color: #666666;
+  border-color: #666666;
+  font-family: 'IntroFont';
+  font-size: 1em;
+}
+
+.btn-carousel:hover{
+  color: #00b6de;
+  background-color: #ffffff;
+  border-color: #ffffff;
+  font-family: 'IntroFont';
+  font-size: 1em;
+}
+
+.btn-carousel:focus{
+  color: #00b6de;
+  background-color: #ffffff;
+  border-color: #ffffff;
+  font-family: 'IntroFont';
+  font-size: 1em;
+}
+
+.titre-serie {
+  font-family: 'IntroFont';
+  font-size: 1.2em;
+  color:#666666;
+  text-align: center;
+  text-decoration: none
+}
+
+.titre-serie:hover{
+  font-family: 'IntroFont';
+  font-size: 1.2em;
+  color:#00b6de;
+  text-align: center;
+  text-decoration: none;
+}
+
+.img-film-galerie{
+  width: 100%;
+}
+
+.marge-block{
+  margin-top: 30px;
 }
