couleur css mpage

--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -12,5 +12,5 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" /> <!-- Icone d'onglet a revoir -->
     </head>
-    <body>
+    <body  class="background-color">
     <header>
