--- a/src/FilRougeBundle/Resources/views/Default/index.html.twig
+++ b/src/FilRougeBundle/Resources/views/Default/index.html.twig
@@ -16,7 +16,7 @@
             <div class="carousel-caption ">
               <h1 class="IntroFontCarousel">Game of Thrones.</h1>
               <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
+              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir  <span class="btn-span">plus</span></a></p>
             </div>
           </div>
         </div>
@@ -26,7 +26,7 @@
             <div class="carousel-caption ">
               <h1 class="IntroFontCarousel">Mr Robot.</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
+              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir <span class="btn-span">plus</span></a></p>
             </div>
           </div>
         </div>
@@ -36,7 +36,7 @@
             <div class="carousel-caption ">
               <h1 class="IntroFontCarousel">Breaking Bad</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
+              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir  <span class="btn-span">plus</span></a></p>
             </div>
           </div>
         </div>
