--- a/app/Resources/views/includes/login.html.twig
+++ b/app/Resources/views/includes/login.html.twig
@@ -1,14 +1,3 @@
-<style>
-  .modal-header, h4, .close {
-      background-color: #5cb85c;
-      color:white !important;
-      text-align: center;
-      font-size: 30px;
-  }
-  .modal-footer {
-      background-color: #f9f9f9;
-  }
-</style>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
@@ -24,7 +13,7 @@
           {{ render(controller("FOSUserBundle:Security:login")) }}
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-login btn-default pull-left" data-dismiss="modal">Cancel</button>
           <p>Not a member? <a href="#">Sign Up</a></p>
           <p>Forgot <a href="#">Password?</a></p>
         </div>
