--- a/app/Resources/views/serie/index.html.twig
+++ b/app/Resources/views/serie/index.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-  <div class="container">
+  <div class="container block-color">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Serie list</h1>
+            <h1 class="page-header page-title-serie">LISTE DES SERIES</h1>
         </div>
     </div>
   {% for serie in series %}
     <a class="" href="{{ path('serie_show', { 'id': serie.id }) }}">
       <div class="container col-lg-3 col-sm-4 col-xs-6">
-          <h2 class="titre-serie">{{ serie.title }}</h2>
+          <h3 class="titre-serie">{{ serie.title }}</h3>
           <img class="img-responsive img-film-galerie" src="{{ asset(serie.getImageName()) }}" alt="">
       </div>
     </a>
@@ -19,4 +19,5 @@
 
 {% block side_content %}
   <a href="{{ path('serie_new') }}">Create a new entry</a>
+  </div>
 {% endblock %}
