moderation star rating

--- a/app/Resources/views/serie/edit.html.twig
+++ b/app/Resources/views/serie/edit.html.twig
@@ -20,6 +20,6 @@
         </li>
     </ul>
     {% else %}
-      {% include 'includes/footer.html.twig' %}
+      {% include 'includes/not_logged.html.twig' %}
     {% endif %}
 {% endblock %}
