--- a/app/Resources/views/includes/login.html.twig
+++ b/app/Resources/views/includes/login.html.twig
@@ -24,7 +24,8 @@
           {{ render(controller("FOSUserBundle:Security:login")) }}
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">Cancel</button>
+          <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+        </form>
           <p>Not a member? <a href="#">Sign Up</a></p>
           <p>Forgot <a href="#">Password?</a></p>
         </div>
