--- a/app/Resources/views/serie/new.html.twig
+++ b/app/Resources/views/serie/new.html.twig
@@ -15,6 +15,6 @@
         </li>
     </ul>
     {% else %}
-      {% include 'includes/footer.html.twig' %}
+      {% include 'includes/not_logged.html.twig' %}
     {% endif %}
 {% endblock %}
